[project]
name = "helloworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "env-utils>=1.2.0",
    "ipython>=9.12.0",
    "langchain>=1.2.14",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.4",
    "requests>=2.33.1",
    "typing>=3.10.0.0",
    "uuid>=1.30",
]
